# RFileMaster

./: .gitignore  Cargo.toml  build.rs
src/: app.rs  main.rs  theme.rs
src/conversion/: engine.rs  external.rs  formats.rs  job.rs  mod.rs  runner.rs
src/ui/: header.rs  mod.rs  queue.rs  selector.rs  settings.rs  widgets.rs
