[package]
name = "rfilemaster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rfilemaster"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", features = ["default_fonts"] }
egui = "0.27"
egui_extras = "0.27"
serde = { version = "1", features = ["derive"] }
rfd = "0.14"
image = { version = "0.25", features = ["png", "jpeg", "bmp", "tiff", "gif", "webp", "ico"] }
printpdf = "0.7"
pulldown-cmark = "0.11"
serde_json = "1"
csv = "1"
serde_yaml = "0.9"
toml = "0.8"
dark-light = "1"
zip = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
epub = "2"
flate2 = "1"
tar = "0.4"

[build-dependencies]
winres = "0.1"